  across the full set of Unicode characters. (John Wagster)

* GITHUB#14239: Hunspell's option to tolerate affix rule count mismatches was
  improved to tolerate more instances of this problem.  (Robert Muir)


* GITHUB#14238: Improve test coverage of Dynamic Range Faceting. (John Houser)

* GITHUB#14213: Allowing indexing stored-only StoredField directly from DataInput. (Tim Brooks)


Optimizations
---------------------

* GITHUB#14052: Speed up DisjunctionDISIApproximation#advance. (Adrien Grand)

* GITHUB#14080: Use the `DocIdSetIterator#loadIntoBitSet` API to speed up dense
  conjunctions. (Adrien Grand)

* GITHUB#14293: Use the `DocIdSetIterator#loadIntoBitSet` API to speed up
  intersection of dense queries with live docs and/or collectors' competitive
  iterators. (Adrien Grand)

* GITHUB#14133: Dense blocks of postings are now encoded as bit sets.
  (Adrien Grand)

* GITHUB#14169: Optimize ContextQuery with big number of contexts. (Mayya Sharipova)

* GITHUB#14181: Add updateable random scorer interface for knn vector index building. This allows
  for fewer objects to be created during indexing and simplifies internally used iterfaces.
  (Ben Trent)

* GITHUB#14160: Adds new filtered HNSW search heuristic based on ACORN-1 algorithm. This improves runtime of filtered HNSW
  searches as much as 5x. By default this new heuristic isn't used, but is available via the new experimental
  KnnSearchStrategy interface in knn queries (Ben Chaplin, Ben Trent)

* GITHUB#14193: Add Automata.makeCharSet() and makeCharClass() that return minimal DFA
  for lists of characters and ranges. Use them in RegExp parser.  (Robert Muir)

* GITHUB#14176: Reduce virtual call when visiting bpv24-encoded doc ids in BKD leaves. (Guo Feng)

* GITHUB#14269: Implement #intoBitset for DocIdSetIterator#all and DocIdSetIterator#range. (Guo Feng)

* GITHUB#14272: Use DocIdSetIterator#range for continuous-id BKD leaves. (Guo Feng)
